[package]
name = "sitegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.19.0" }
async-recursion = "1.1.1"
log = "0.4"
petgraph = "0.6.4"
clap = { version = "4.5.4", features = ["derive"] }
